# lwh_git_repository

./: README.md
lwh_6d_pose/3d-ndt/: CMakeLists.txt  readme.txt
lwh_6d_pose/3d-ndt/src/: main.cpp
lwh_6d_pose/3dsc-icp/: CMakeLists.txt
lwh_6d_pose/3dsc-icp/src/: main.cpp
lwh_6d_pose/FPFH可视化/: CMakeLists.txt  readme.txt
lwh_6d_pose/FPFH可视化/src/: main.cpp
lwh_6d_pose/Fast-PPF-master/: CMakeLists.txt  demo.cpp
lwh_6d_pose/Fast-PPF-master/include/: CMakeLists.txt
lwh_6d_pose/Fast-PPF-master/include/HPR/: CMakeLists.txt
lwh_6d_pose/Fast-PPF-master/include/PPF/: PPF.cpp
lwh_6d_pose/Fast-PPF-master/include/dataType/: CMakeLists.txt
lwh_6d_pose/Fast-PPF-master/include/meshSampling/: CMakeLists.txt  meshSampling.cpp
lwh_6d_pose/Fast-PPF-master/include/pclFunction/: CMakeLists.txt  pclFunction.cpp
lwh_6d_pose/Harris3D/: CMakeLists.txt  readme.txt
lwh_6d_pose/Harris3D/src/: main.cpp
lwh_6d_pose/ISS/: CMakeLists.txt  readme.txt
lwh_6d_pose/ISS-RANSAC-ICP/: CMakeLists.txt
lwh_6d_pose/ISS-RANSAC-ICP/include/: f_pipeline_setup.h  iss3d_shot_ransac_icp.h
lwh_6d_pose/ISS-RANSAC-ICP/src/: main.cpp
lwh_6d_pose/ISS/src/: main.cpp
lwh_6d_pose/K-4PCS/: CMakeLists.txt  readme.txt
lwh_6d_pose/K-4PCS/src/: main.cpp
lwh_6d_pose/KD-ICP/: CMakeLists.txt
lwh_6d_pose/KD-ICP/src/: main.cpp
lwh_6d_pose/LM-ICP/: CMakeLists.txt
lwh_6d_pose/LM-ICP/include/: lmicp.cpp  lmicp.h
lwh_6d_pose/LM-ICP/src/: main.cpp
lwh_6d_pose/NDT-ICP/: CMakeLists.txt
lwh_6d_pose/NDT-ICP/src/: main.cpp
lwh_6d_pose/SAC-IA-ICP/: CMakeLists.txt
lwh_6d_pose/SAC-IA-ICP/src/: main.cpp
lwh_6d_pose/SAC_IA_NDT/: CMakeLists.txt  readme.txt
lwh_6d_pose/SAC_IA_NDT/src/: main.cpp
lwh_6d_pose/iss-3dsc-icp/: CMakeLists.txt
lwh_6d_pose/iss-3dsc-icp/include/: KeyPointsAnd3DSC.h  Registration.h
lwh_6d_pose/iss-3dsc-icp/src/: KeyPointsAnd3DSC.cpp  Registration.cpp  main.cpp
lwh_6d_pose/sca-ia-icp2/: CMakeLists.txt  readme.txt
lwh_6d_pose/sca-ia-icp2/src/: main.cpp
lwh_6d_pose/sift-fhph-sac-icp/: CMakeLists.txt  readme.txt
lwh_6d_pose/sift-fhph-sac-icp/include/: pipeline_setup.h
lwh_6d_pose/sift-fhph-sac-icp/src/: main.cpp
lwh_6d_pose/特征点改进采样一致性icp/: CMakeLists.txt  readme.txt
lwh_6d_pose/特征点改进采样一致性icp/src/: main.cpp
lwh_ros/iqr_ws/devel/: .catkin  .rosinstall  local_setup.sh
lwh_ros/iqr_ws/devel/include/pan_tilt_msgs/: PanTiltCmdDeg.h  PanTiltCmdRad.h  PanTiltStatus.h
lwh_ros/iqr_ws/devel/lib/pan_tilt_driver/: PanTiltDriverNode
lwh_ros/iqr_ws/devel/lib/pkgconfig/: pan_tilt_bringup.pc  pan_tilt_description.pc  pan_tilt_driver.pc  pan_tilt_msgs.pc  teleop_twist_joy.pc
lwh_ros/iqr_ws/devel/lib/teleop_twist_joy/: teleop_node
lwh_ros/lidar_ws/devel/: .catkin  setup.sh
lwh_ros/lidar_ws/devel/lib/lslidar_driver/: lslidar_driver_node
lwh_ros/lidar_ws/devel/lib/pkgconfig/: lslidar_driver.pc  lslidar_msgs.pc
lwh_ros/lwh_ws/devel/: .catkin  setup.sh
lwh_ros/lwh_ws/devel/include/amcl/: AMCLConfig.h
lwh_ros/lwh_ws/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
lwh_ros/lwh_ws/devel/include/global_planner/: GlobalPlannerConfig.h
lwh_ros/lwh_ws/devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
lwh_ros/lwh_ws/devel/lib/amcl/: amcl
lwh_ros/lwh_ws/devel/lib/base_local_planner/: point_grid
lwh_ros/lwh_ws/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
lwh_ros/lwh_ws/devel/lib/fake_localization/: fake_localization
lwh_ros/lwh_ws/devel/lib/global_planner/: planner
lwh_ros/lwh_ws/devel/lib/map_server/: map_saver  map_server  rtest
lwh_ros/lwh_ws/devel/lib/move_base/: move_base
lwh_ros/lwh_ws/devel/lib/navfn/: navfn_node
lwh_ros/lwh_ws/devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  rotate_recovery.pc  teb_local_planner.pc  turn_on_wheeltec_robot.pc  usb_cam.pc  voxel_grid.pc  wheeltec_joy.pc  wheeltec_multi.pc  wheeltec_robot_rc.pc  world_canvas_msgs.pc
lwh_ros/lwh_ws/devel/lib/teb_local_planner/: test_optim_node
lwh_ros/lwh_ws/devel/lib/turn_on_wheeltec_robot/: wheeltec_robot_node
lwh_ros/lwh_ws/devel/lib/usb_cam/: usb_cam_node
lwh_ros/realsense_ws/devel/: .catkin  .rosinstall  local_setup.sh
lwh_ros/realsense_ws/install/: .rosinstall  setup.sh
lwh_ros/yolov5_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
lwh_yolov5/: detect.py  environment.yaml  export.py  heatmap.py  main_gradcam.py  make_text.py  onnxsim_use.py  packages.txt  train.py  val.py  voc_labels.py
lwh_yolov5/6d_pose/: 3d_pose_2.py  3dpose.py  6dof.py  poseresult.py  test3.py
lwh_yolov5/6d_pose/capture/: real_time_pcd_capture.py  target_ply_capture.py
lwh_yolov5/6d_pose/convert/: ply_to_pcd.py  stl_to_pcd.py  stl_to_ply.py
lwh_yolov5/6d_pose/my_test/: adjust.py  adjust_scene.ply  my_icp.py
lwh_yolov5/6d_pose/view/: loadpcd.py  loadply.py  loadstl.py
lwh_yolov5/classify/: predict.py  train.py  val.py
lwh_yolov5/config/: recycle.yaml  yolov5s.yaml
lwh_yolov5/data/: bottle.yaml  plastic_bottle.yaml  plastic_bottle_2.yaml  small_recycle.yaml
lwh_yolov5/data/scripts/: small_recycle_datasets.yaml
lwh_yolov5/models/: common.py  gradcam.py  yolo.py  yolov5_object_detector.py  yolov5m_SE.yaml  yolov5s_CBAM.yaml  yolov5s_MobilenetV3.yaml
lwh_yolov5/my_models/: yolov5s_CBAM.yaml  yolov5s_ECA_shuffleNetV2.yaml  yolov5s_MobilenetV3.yaml  yolov5s_shuffleNetV2.yaml  yolov5s_shuffleNetV2_EMA_1.yaml  yolov5s_shuffleNetV2_bifpn.yaml  yolov5s_shuffleNetV2_bifpn_ema.yaml
lwh_yolov5/realsense_yolo/: a.ply  d455_test.py  depth_detect.py  fps_test.py  target_ply_capture.py  xyzd_detect.py
lwh_yolov5/utils/: activations.py  general.py  loss.py  plots.py  torch_utils.py
lwh_yolov5/utils/loggers/: __init__.py
lwh_yolov5/utils/loggers/clearml/: clearml_utils.py
lwh_yolov5/utils/loggers/comet/: hpo.py
lwh_yolov5/utils/loggers/wandb/: wandb_utils.py
(+100 files in other folders)
